--- a/services/backend/package.json
+++ b/services/backend/package.json
@@ -8,7 +8,8 @@
         "@mirrorworld/web3.js": "^2.8.0",
         "@solana/web3.js": "^1.87.1",
         "cross-env": "7.0.3",
-        "dotenv": "^16.3.1"
+        "dotenv": "^16.3.1",
+        "paystack": "^2.0.1"
     },
     "devDependencies": {
         "@types/node": "^20.8.6",
